--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="service-style-one col-md-4 col-sm-6 col-xs-12">
                 	<div class="inner-box">
                     	<div class="icon"><figure class="image"><img src="images/icons/icon-2.png" alt=""></figure></div>
-                        <h3><a href="">Improve your grades.</a></h3>
+                        <h3>Improve your grades.</h3>
                         <div class="text">With Memori's VR integration of the Loci memorization method, your grades can improve by more than 40% today!</div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="service-style-one col-md-4 col-sm-6 col-xs-12">
                 	<div class="inner-box">
                     	<div class="icon"><figure class="image"><img src="images/icons/icon-3.png" alt=""></figure></div>
-                        <h3><a href="">Buy Memori with textbooks.</a></h3>
+                        <h3>Buy Memori with textbooks.</h3>
                         <div class="text">Buy the Memori app alongside your school textbooks, complete with a complimentary Google cardboard.</div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="service-style-one col-md-4 col-sm-6 col-xs-12">
                 	<div class="inner-box">
                     	<div class="icon"><figure class="image"><img src="images/icons/icon-4.png" alt=""></figure></div>
-                        <h3><a href="">Pricing</a></h3>
+                        <h3>Pricing</h3>
                         <div class="text">We wanted to make sure that Memori was accesible to everyone. Compared to other apps of it's class, Memori is an affordable way to enhance your learning experience.</div>
                     </div>
                 </div>
