--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="feature-block-one">
                         <div class="inner-box">
                             <div class="icon"><figure class="image"><img src="images/icons/icon-6.png" alt=""></figure></div>
-                            <h3><a href="#">What are Memory Palaces?</a></h3>
+                            <h3>What are Memory Palaces?</h3>
                             <div class="text">Memory palaces link visualization of spatial environments to information that we want to recall. It specifically targets two areas of the brain. The dorsolateral prefrontal cortex (DLPFC) and the Medial Prefrontal Cortex (MPFC).</div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                     <div class="feature-block-one">
                         <div class="inner-box">
                             <div class="icon"><figure class="image"><img src="images/icons/icon-7.png" alt=""></figure></div>
-                            <h3><a href="#">Why Memory palaces?</a></h3>
+                            <h3>Why Memory palaces?</h3>
                             <div class="text">This graph, from Dresler's study, shows the difference in participant's memory retention after different time periods. With mnemonic training (Loci method), participants showed drastically better results than the other two control groups.</div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                     <div class="feature-block-one">
                         <div class="inner-box">
                             <div class="icon"><figure class="image"><img src="images/icons/icon-8.png" alt=""></figure></div>
-                            <h3><a href="#">What does VR benefit Memory palaces?</a></h3>
+                            <h3>What does VR benefit Memory palaces?</h3>
                             <div class="text">Memory palaces heavily deals with visualization and spatial awareness. The best technology to enhance this experience in VR. With VR, the user would be able to have a tangible version of their memory palaces. This would make it easier for some people to use Loci, and make the experience even better for others.</div>
                         </div>
                     </div>
